small adjustments, solving dark mode issue, adding attribution for images

--- a/doc/custom.scss
+++ b/doc/custom.scss
@@ -132,7 +132,6 @@ td:first-child {
   font-family: "Source Sans 3", "Source Sans Pro", "Segoe UI", Roboto, Helvetica, sans-serif !important;
   font-size: 14.875px !important;
   font-weight: 400;
-  color: #212529;
   line-height: 1.1rem;
   padding-left: 17.850px !important;
 }
